<resources>
    <string name="app_name">nMedia</string>
    <string name="text_view">NMedia!</string>
    <string name="Hi_Sergey">Hi Sergey!</string>
    <string name="logo_netology">Logotype of Netology</string>
    <string name="menu">Menu</string>
    <string name="like_str">like sing</string>
    <string name="share_str">share sing</string>
    <string name="views_str">views sing</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_remove">Delete</string>

    <string name="description_post_like">Save</string>
    <string name="post_text">New text</string>
    <string name="present_text">hi is the author this application. In is more, and more an information about this application. </string>
    <string name="chooser_share_post">share post</string>
    <string name="error_empty_content">ERROR: null or Blanck string</string>
    <string name="description_post_save">Save New Post</string>
    <string name="add_post">Add post</string>
    <string name="chooser_edit_post">edited post</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>